<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="at.thelegend27.timemanagementtool.AddNewTaskActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/addTaskName_wrapper"
            style="@style/AppTheme.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Task name"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:errorTextAppearance="@style/AppTheme.Text.ErrorText"
            app:hintTextAppearance="@style/AppTheme.Text.HintText">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/addTaskName"
                style="@style/AppTheme.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textPersonName|textCapWords"
                app:errorTextAppearance="@style/AppTheme.Text.ErrorText"
                app:hintTextAppearance="@style/AppTheme.Text.HintText" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"

            android:orientation="horizontal">

            <EditText
                android:id="@+id/addTaskDeadline"
                android:layout_width="200dp"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:hint="Deadline"
                android:focusable="false"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>

            <Button
                android:id="@+id/addTaskDeadlineButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:text="Date"
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/colorWhite"
                android:layout_centerHorizontal="true"
                android:paddingBottom="@dimen/_16sdp"
                android:paddingTop="@dimen/_16sdp" />

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/addTaskDescription_wrapper"
            style="@style/AppTheme.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Task description"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:errorTextAppearance="@style/AppTheme.Text.ErrorText"
            app:hintTextAppearance="@style/AppTheme.Text.HintText">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/addTaskDescription"
                style="@style/AppTheme.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textPersonName|textCapWords"
                app:errorTextAppearance="@style/AppTheme.Text.ErrorText"
                app:hintTextAppearance="@style/AppTheme.Text.HintText" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/addTaskButton"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:text="Add"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/colorWhite"
            android:layout_centerHorizontal="true"
            android:paddingBottom="@dimen/_16sdp"
            android:paddingTop="@dimen/_16sdp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:layout_gravity="right"
            />

    </LinearLayout>
</ScrollView>
