<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="at.thelegend27.timemanagementtool.AddTasksForEmployeeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/department_task_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:dropDownWidth="match_parent"
            android:prompt="@string/department_dropdown_title"
            />



        <Spinner
            android:id="@+id/employee_task_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:dropDownWidth="match_parent"
            android:prompt="@string/employee_dropdown_title"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            >

            <EditText
                android:id="@+id/addTaskDeadlineAdmin"
                android:layout_width="200dp"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:hint="Deadline"
                android:focusable="false"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp" />

            <Button
                android:id="@+id/addTaskDeadlineButtonAdmin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:text="Date"
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/colorWhite"
                android:layout_centerHorizontal="true"
                android:paddingBottom="@dimen/_16sdp"
                android:paddingTop="@dimen/_16sdp"
                />

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/addTaskNameAdmin_wrapper"
            style="@style/AppTheme.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Task name"
            android:layout_marginLeft="@dimen/_16sdp"
            android:layout_marginRight="@dimen/_16sdp"
            app:errorTextAppearance="@style/AppTheme.Text.ErrorText"
            app:hintTextAppearance="@style/AppTheme.Text.HintText">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/addTaskNameAdmin"
                style="@style/AppTheme.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textPersonName|textCapWords"
                app:errorTextAppearance="@style/AppTheme.Text.ErrorText"
                app:hintTextAppearance="@style/AppTheme.Text.HintText" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/addTaskDescriptionAdmin_wrapper"
            style="@style/AppTheme.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Task description"
            android:layout_marginLeft="@dimen/_16sdp"
            android:layout_marginRight="@dimen/_16sdp"
            app:errorTextAppearance="@style/AppTheme.Text.ErrorText"
            app:hintTextAppearance="@style/AppTheme.Text.HintText">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/addTaskDescriptionAdmin"
                style="@style/AppTheme.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textPersonName|textCapWords"
                app:errorTextAppearance="@style/AppTheme.Text.ErrorText"
                app:hintTextAppearance="@style/AppTheme.Text.HintText" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/addTaskButtonAdmin"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:text="Add"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/colorWhite"
            android:layout_centerHorizontal="true"
            android:paddingBottom="@dimen/_16sdp"
            android:paddingTop="@dimen/_16sdp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:layout_gravity="right"
            />
    </LinearLayout>

</ScrollView>
