<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/add_new_task_admin"
        android:orderInCategory="1"
        android:title="@string/action_settings"
        app:showAsAction="always"
        android:icon="@drawable/ic_note_add_white_24dp"
        />
    <item
        android:id="@+id/add_new_task_for_employee"
        android:orderInCategory="2"
        android:title="add task for employee"
        app:showAsAction="always"
        android:icon="@drawable/ic_assignment_ind_white_24dp"
        />



</menu>